@@ -5,19 +5,21 @@ import PCD.BACKEND.RECRAFTMARKET.dto.user.UserEntityDTO;
 import PCD.BACKEND.RECRAFTMARKET.dto.user.UserEntityDTOMapper;
 import PCD.BACKEND.RECRAFTMARKET.exceptions.ResourceNotFoundException;
 import PCD.BACKEND.RECRAFTMARKET.model.file.FileDataUser;
+import PCD.BACKEND.RECRAFTMARKET.model.product.Product;
 import PCD.BACKEND.RECRAFTMARKET.model.user.UserEntity;
 import PCD.BACKEND.RECRAFTMARKET.repository.UserEntityRepository;
 import PCD.BACKEND.RECRAFTMARKET.security.utility.ResponseHandler;
 import PCD.BACKEND.RECRAFTMARKET.service.file.FileServiceUser;
+import PCD.BACKEND.RECRAFTMARKET.service.product.ProductService;
 import lombok.AllArgsConstructor;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 
-import java.io.File;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
@@ -29,37 +31,46 @@ public class UserEntityServiceImpl implements UserEntityService{
     private final UserEntityRepository userEntityRepository;
     private final UserEntityDTOMapper userEntityDTOMapper;
     private final FileServiceUser fileService;
-@Override
-     public ResponseEntity<Object> getUserEntityByUsername(final String username)
+    private final ProductService productService;
+///////////////////////////ALL about User //////////////////////////////////////////////////////////
+    @Override
+     public ResponseEntity<Object> fetchUserByUsername(final String username)
      {
-         final UserEntity user= userEntityRepository.fetchUserWithUsername(username)
-                .orElseThrow(()-> new ResourceNotFoundException(String.format("The user with username : %s could not be found.", username)));
-         final UserEntityDTO userdto=userEntityDTOMapper.apply(user);
-         return ResponseHandler.generateResponse(userdto , HttpStatus.OK) ;
+         final UserEntity savedUser = getUserByUsername(username);
+         final UserEntityDTO user = userEntityDTOMapper.apply(savedUser);
+         return ResponseHandler.generateResponse(user , HttpStatus.OK) ;
      }
-    @Override
-    public ResponseEntity<Object> getUserEntityById(UUID idUserEntity) {
-        final UserEntity currentUser = userEntityRepository.findById(idUserEntity).get();
-        final UserEntityDTO user = userEntityDTOMapper.apply(currentUser);
-        return ResponseHandler.generateResponse(user , HttpStatus.OK);
 
-    }
     @Override
-    public ResponseEntity<Object> updateUserEntity(UUID idUserEntity, UserEntity userUpdated) {
-        UserEntity userToUpdate= userEntityRepository.findById(idUserEntity).get();
-        userToUpdate.setUsername(userUpdated.getUsername());
+    public ResponseEntity<Object> fetchUserEntityById(UUID UserId) {
+        final UserEntity savedUser = getUserById(UserId);
+        final UserEntityDTO user  = userEntityDTOMapper.apply(savedUser);
+        return ResponseHandler.generateResponse(user,HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Object> updateUserEntity(UUID UserId, UserEntity userUpdated) {
+        UserEntity userToUpdate = getUserById(UserId);
+       // userToUpdate.setPassword(userUpdated.getPassword());
+        userToUpdate.setPoints(userUpdated.getPoints());
+       // userToUpdate.setUsername(userUpdated.getUsername());
         userToUpdate.setPhonenumber(userUpdated.getPhonenumber());
         userToUpdate.setAddress(userUpdated.getAddress());
         userEntityRepository.save(userToUpdate);
-        final String successResponse = String.format("User with ID %d updated successfully", idUserEntity);
+        final String successResponse = String.format("User with ID %d updated successfully", UserId);
 
         return ResponseHandler.generateResponse(successResponse, HttpStatus.OK);
 
     }
     @Override
-    public ResponseEntity<Object> getAllUserEntity() {
+    public List<UserEntityDTO> getAllUserEntity() {
     final List<UserEntityDTO> users =mapToDTOList(userEntityRepository.findAll());
-    return ResponseHandler.generateResponse(users, HttpStatus.OK);
+    return users;
+    }
+    @Override
+    public ResponseEntity<Object> fetchAllUserEntity() {
+        final List<UserEntityDTO> users = getAllUserEntity();
+        return ResponseHandler.generateResponse(users,HttpStatus.OK);
     }
 
     @Override
@@ -72,270 +83,268 @@ public class UserEntityServiceImpl implements UserEntityService{
     {
         return users.stream().map(userEntityDTOMapper).toList();
     }
-    @Override
-    public void deleteUserEntityById(UUID idUserEntity) {
-        userEntityRepository.deleteById(idUserEntity);
-    }
 
-    @Override
-    public void deleteAllUserEntity(List<UserEntity> users) {
-        userEntityRepository.deleteAll(users);
-    }
 
     @Override
     public ResponseEntity<Object> addImageToUser(UUID UserId, @NotNull MultipartFile image) throws IOException {
-        final UserEntity existingUser =  getUserEntityById(UserId);
+        final UserEntity existingUser =  getUserById(UserId);
         final FileDataUser newImage = fileService.processUploadedFile(image);
         newImage.setUserFile(existingUser);
+        existingUser.setFileUser(newImage);
         userEntityRepository.save(existingUser);
         final String successResponse ="The image is added successfully.";
         return ResponseHandler.generateResponse(successResponse , HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Object> removeImageFromUser(UUID UserId, long imageId) throws IOException {
-        final UserEntity exisitingUser = getUserEntityById(UserId);
-        final FileDataUser existingImage = fileService.getFileDataUserById(imageId);
-        if(!exisitingUser.getFileUser().contains(existingImage)){
-            throw new IllegalStateException(String.format("The Image with ID : %d  does not belong to this User", imageId));
+    public ResponseEntity<Object> removeImageFromUser(UUID UserId) throws IOException {
+        final UserEntity existingUser = getUserById(UserId);
+        if(existingUser.getFileUser() == null){
+            throw new IllegalStateException("there is no image to delete");
         }
-        exisitingUser.getFileUser().remove(existingImage);
+        
+        final FileDataUser existingImage = fileService.getFileDataUserById(existingUser.getFileUser().getId());
+    
+        existingUser.setFileUser(null);
         existingImage.setUserFile(null);
         fileService.deleteFileFromFileSystemUser(existingImage);
-        userEntityRepository.save(exisitingUser);
-        final String successResponse = String.format("The image with ID : %d deleted successfully",imageId);
+        userEntityRepository.save(existingUser);
+        final String successResponse = String.format("The image with ID : %d deleted successfully",existingImage.getId());
         return ResponseHandler.generateResponse(successResponse , HttpStatus.OK);
     }
 
     @Override
     public  ResponseEntity<byte[]> fetchImageFromUser(final UUID UserId) throws IOException {
-        final UserEntity user = getUserEntityById(UserId);
+        final UserEntity user = getUserById(UserId);
         final FileDataUser fileDataUser = user.getFileUser();
         return fileService.downloadFile(fileDataUser);
     }
 
-/*@Override
-public ResponseEntity<Object> addImageToUser(UUID UserId, @NotNull MultipartFile image) throws IOException {
-    // Fetch the existing user entity
-    final UserEntity existingUser = getUserEntityById(UserId);
 
-    // Process the uploaded file
-    final FileDataUser newImage = fileService.processUploadedFile(image);
+    ////////////////////////////////////ALL about the product ////////////////////////////////////////////
+    @Override
+    public ResponseEntity<Object> addProductToUser(UserDetails userDetails, UUID userId, Product product) {
+        final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+        if (!currentUser.getId().equals(userId)) {
+            return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
+        }
 
-    // Associate the file with the user
-    newImage.setUserFile(existingUser);
+        UserEntity user = getUserById(userId);
+        Product productadded=productService.addProduct(product);
+        productadded.setPublisher(user);
+        // Add product to user's list of products
+        user.getProductsList().add(product);
+        userEntityRepository.save(user);
 
-    // Save the user entity
-    userEntityRepository.save(existingUser);
+        return ResponseHandler.generateResponse("Product added to user successfully.", HttpStatus.OK);
+    }
 
-    final String successResponse ="The image is added successfully.";
-    return ResponseHandler.generateResponse(successResponse , HttpStatus.OK);
-}
 
+    @Override
+    public ResponseEntity<Object> addImageToProductUser(UserDetails userDetails,UUID userId, Long productId, @NotNull MultipartFile image) throws IOException {
+
+        final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+        if (!currentUser.getId().equals(userId)) {
+            return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
+        }
+        boolean productFound = currentUser.getProductsList().stream()
+                .anyMatch(product -> product.getIdProduct()==productId);
+        // If productFound is true, add image to product and save the user entity
+        if (productFound) {
+            productService.addImageToProduct(productId,image);
+            //productNoImage.getFilesProduct().add(newImage);
+            userEntityRepository.save(currentUser);
+            return ResponseHandler.generateResponse("image Product added successfully.", HttpStatus.OK);
+        } else {
+            // Product not found, return an error response
+            return ResponseHandler.generateResponse("Product not found for the user.", HttpStatus.NOT_FOUND);
+        }
+    }
+    @Override
+    public ResponseEntity<Object> updateProductUser(UserDetails userDetails,UUID userId, Long productId, Product productupdated) {
+        final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+        if (!currentUser.getId().equals(userId)) {
+            return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
+        }
+
+        // Check if any product in the user's list has the provided productId
+        boolean productFound = currentUser.getProductsList().stream()
+                .anyMatch(product -> product.getIdProduct()==productId);
+
+        // If productFound is true, update the product and save the user entity
+        if (productFound) {
+            productService.updateProduct(productId, productupdated);
+            userEntityRepository.save(currentUser);
+            return ResponseHandler.generateResponse("Product updated successfully.", HttpStatus.OK);
+        } else {
+            // Product not found, return an error response
+            return ResponseHandler.generateResponse("Product not found for the user.", HttpStatus.NOT_FOUND);
+        }
+    }
+    @Override
+    public ResponseEntity<Object> deleteProductFromUser(UserDetails userDetails,UUID userId, Long productId) throws IOException {
+        final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+        if (!currentUser.getId().equals(userId)) {
+            return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
+        }
+        // Check if any product in the user's list has the provided productId
+        boolean productFound = currentUser.getProductsList().stream()
+                .anyMatch(product -> product.getIdProduct() == productId);
+        // If productFound is true, update the product and save the user entity
+        if (productFound) {
+            productService.deleteProduct(productId);//the problem is here
+            //userEntityRepository.save(currentUser); here is the problem :{
+            //    "timestamp": "2024-04-08T17:03:49.1732377",
+            //    "status": "BAD_REQUEST",
+            //    "message": "Other exception occurs",
+            //    "errors": [
+            //        "Unable to find PCD.BACKEND.RECRAFTMARKET.model.product.Product with id 252"
+            //    ]
+            //}
+            return ResponseHandler.generateResponse("Product deleted successfully.", HttpStatus.OK);
+        }
+        else {
+            // Product not found, return an error response
+            return ResponseHandler.generateResponse("Product not found for the user.", HttpStatus.NOT_FOUND);
+        }
+
+    }
+    @Override
+    public ResponseEntity<Object> getAllProductsOfUser(UUID userId) {
+        UserEntity user = getUserById(userId);
+        List<Product> products = user.getProductsList();
+        return ResponseHandler.generateResponse(products, HttpStatus.OK);
+    }
+
+
+//////////////////////////////// Likes List ///////////////////////////////////////////
 @Override
-public ResponseEntity<Object> removeImageFromUser(UUID UserId, long imageId) throws IOException {
-    // Fetch the existing user entity
-    final UserEntity existingUser = getUserEntityById(UserId);
-
-    // Fetch the existing image file
-    final FileDataUser existingImage = fileService.getFileDataUserById(imageId);
-
-    // Check if the image belongs to the user
-    if (!existingUser.getFileUser().contains(existingImage)) {
-        throw new IllegalStateException(String.format("The Image with ID : %d does not belong to this User", imageId));
+public ResponseEntity<Object> getAllLikesListOfUser(UserDetails userDetails, UUID userId) throws IOException {
+        //make sure the id of user is really his id
+    final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+    if (!currentUser.getId().equals(userId)) {
+        return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
     }
-
-    // Remove the image from the user's list of files
-    existingUser.getFileUser().remove(existingImage);
-
-    // Unset the user association from the image
-    existingImage.setUserFile(null);
-
-    // Delete the image file from the file system
-    fileService.deleteFileFromFileSystemUser(existingImage);
-
-    // Save the user entity
-    userEntityRepository.save(existingUser);
-
-    final String successResponse = String.format("The image with ID : %d deleted successfully", imageId);
-    return ResponseHandler.generateResponse(successResponse , HttpStatus.OK);
+    List<Product> likesList=currentUser.getLikedProducts();
+    return ResponseHandler.generateResponse(likesList, HttpStatus.OK);
 }
 
+    @Override
+    public ResponseEntity<Object> addProductToLikesListUser(UserDetails userDetails, UUID userId, Long productId) throws IOException {
+        final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+        if (!currentUser.getId().equals(userId)) {
+            return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
+        }
+        final Product likedProduct =productService.getProductById(productId);
+        currentUser.getLikedProducts().add(likedProduct);
+        likedProduct.getLoversList().add(currentUser);
+        // Add product to user's list of products
+        userEntityRepository.save(currentUser);
+        return ResponseHandler.generateResponse("Product added to likes list successfully.", HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Object> deleteFromLikesListUser(UserDetails userDetails, UUID userId, Long productId) throws IOException {
+        final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+        if (!currentUser.getId().equals(userId)) {
+            return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
+        }
+        // Get the liked product
+        final Product likedProduct = productService.getProductById(productId);
+
+        // Remove product from user's likes list
+        boolean removedFromLikes = currentUser.getLikedProducts().remove(likedProduct);
+
+        if (!removedFromLikes) {
+            return ResponseHandler.generateResponse("Product is not in user's likes list.", HttpStatus.BAD_REQUEST);
+        }
+
+        // Remove user from product's lovers list
+        likedProduct.getLoversList().remove(currentUser);
+
+        // Save changes to the database
+        try {
+            userEntityRepository.save(currentUser);
+            return ResponseHandler.generateResponse("Product removed from likes list successfully.", HttpStatus.OK);
+        } catch (Exception e) {
+            return ResponseHandler.generateResponse("Failed to remove product from likes list.", HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+//////////////////////////// Favourite List//////////////////////////////////////////////////
 @Override
-public ResponseEntity<byte[]> fetchImageFromUser(UUID UserId) throws IOException {
-    // Fetch the existing user entity
-    final UserEntity user = getUserEntityById(UserId);
-
-    // Fetch the image file associated with the user
-    final FileDataUser fileDataUser = user.getFilesUser();
-
-    // Download the file and return its byte array
-    return fileService.downloadFile(fileDataUser);
+public ResponseEntity<Object> getAllFavouriteListOfUser(UserDetails userDetails, UUID userId) throws IOException {
+    final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+    if (!currentUser.getId().equals(userId)) {
+        return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
+    }
+    List<Product> favouriteListList=currentUser.getFavouriteProducts();
+    return ResponseHandler.generateResponse(favouriteListList, HttpStatus.OK);
 }
-*/
-
-
-
-
-
-    
-    
-/*
- private UUID id;
-
-    @Column(name ="username" , unique = true , nullable = false)
-    private String username;
-
-    @Column(name = "password" , nullable = false)
-    private String password;
-
-    @Column(name = "phone")
-    private Number phonenumber;
-    @Column(name = "materials")
-    private String materials;
-    @Column(name = "address")
-    private String address;
-    @Column(name = "points")
-    private Number points;
-    private final ArticleRepository articleRepository;
-    private final ArticleDTOMapper articleDTOMapper;
-    private final FileService fileService;
 
     @Override
-    public ResponseEntity<Object> fetchArticleById(final long articleId) {
-        final Article currentArticle = getArticleById(articleId);
-        final ArticleDTO article = articleDTOMapper.apply(currentArticle);
-        return ResponseHandler.generateResponse(article , HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<Object> updateArticleById(final long articleId, @NotNull String articleJson) throws IOException {
-
-        final Article existingArticle  = getArticleById(articleId);
-        final Article updatedArticle = new ObjectMapper().readValue(articleJson , Article.class);
-
-        var updatedChapters = updatedArticle.getChapters();
-        var updatedDetails = updatedArticle.getDetails();
-
-        existingArticle.setTitle(updatedArticle.getTitle());
-        existingArticle.setPrice(updatedArticle.getPrice());
-        existingArticle.setQuantity(updatedArticle.getQuantity());
-        existingArticle.setReference(updatedArticle.getReference());
-        existingArticle.setLayoutDescription(updatedArticle.getLayoutDescription());
-
-        chapterService.deleteAllChapters(existingArticle.getChapters());
-        detailService.deleteAllDetails(existingArticle.getDetails());
-
-        for(var updatedChapter : updatedChapters)
-        {
-            updatedChapter.setArticle(existingArticle);
+    public ResponseEntity<Object> addProductToFavouriteListUser(UserDetails userDetails, UUID userId, Long productId) throws IOException {
+        final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+        if (!currentUser.getId().equals(userId)) {
+            return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
         }
-        existingArticle.setChapters(updatedChapters);
-        for(var updatedDetail : updatedDetails)
-        {
-            updatedDetail.setArticle(existingArticle);
+        final Product favouriteProduct =productService.getProductById(productId);
+        currentUser.getFavouriteProducts().add(favouriteProduct);
+        favouriteProduct.getWantersList().add(currentUser);
+        // Add product to user's list of products
+        try {
+            userEntityRepository.save(currentUser);
+            return ResponseHandler.generateResponse("Product removed from likes successfully.", HttpStatus.OK);
+        } catch (Exception e) {
+            return ResponseHandler.generateResponse("Failed to remove product from likes list.", HttpStatus.INTERNAL_SERVER_ERROR);
+        }   }
+
+    @Override
+    public ResponseEntity<Object> deleteFromFavouriteListUser(UserDetails userDetails, UUID userId, Long productId) throws IOException {
+        final UserEntity currentUser=getUserByUsername(userDetails.getUsername());
+        if (!currentUser.getId().equals(userId)) {
+            return ResponseHandler.generateResponse("You are unauthorized", HttpStatus.UNAUTHORIZED);
         }
-        existingArticle.setDetails(updatedDetails);
+        // Get the liked product
+        final Product favouriteProduct = productService.getProductById(productId);
 
+        // Remove product from user's likes list
+        boolean removedFromFavourite = currentUser.getFavouriteProducts().remove(favouriteProduct);
 
-
-        articleRepository.save(existingArticle);
-
-
-        final String successResponse = String.format("Article with ID %d updated successfully", articleId);
-        return ResponseHandler.generateResponse(successResponse , HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<Object> deleteArticleById(long articleId) throws IOException {
-        final Article existingArticle = getArticleById(articleId);
-
-        chapterService.deleteAllChapters(existingArticle.getChapters());
-        detailService.deleteAllDetails(existingArticle.getDetails());
-        fileService.deleteAllFiles(existingArticle.getFiles());
-        articleRepository.deleteArticleById(articleId);
-
-        final String successResponse = String.format("Article with ID %d deleted successfully", articleId);
-        return ResponseHandler.generateResponse(successResponse , HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<Object> addImageToArticle(long articleId, @NotNull MultipartFile image) throws IOException {
-        final Article existingArticle =  getArticleById(articleId);
-        final FileData newImage = fileService.processUploadedFile(image);
-        newImage.setArticle(existingArticle);
-        articleRepository.save(existingArticle);
-
-        final String successResponse ="The image is added successfully.";
-        return ResponseHandler.generateResponse(successResponse , HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<Object> removeImageFromArticle(long articleId, long imageId) throws IOException {
-        final Article exisitingArticle = getArticleById(articleId);
-        final FileData existingImage = fileService.getFileDataById(imageId);
-
-        if(!exisitingArticle.getFiles().contains(existingImage))
-        {
-            throw new IllegalStateException(String.format("The Image with ID : %d  does not belong to this article", imageId));
+        if (!removedFromFavourite) {
+            return ResponseHandler.generateResponse("Product is not in user's favourite list.", HttpStatus.BAD_REQUEST);
         }
 
-        exisitingArticle.getFiles().remove(existingImage);
-        existingImage.setArticle(null);
-        fileService.deleteFileFromFileSystem(existingImage);
-        articleRepository.save(exisitingArticle);
-        final String successResponse = String.format("The image with ID : %d deleted successfully",imageId);
-        return ResponseHandler.generateResponse(successResponse , HttpStatus.OK);
-    }
-    @Override
-    public  ResponseEntity<byte[]> fetchImageFromArticle(final long articleId,final int fileIndex) throws IOException {
+        // Remove user from product's lovers list
+        favouriteProduct.getWantersList().remove(currentUser);
 
-        final Article article = getArticleById(articleId);
-        if(fileIndex >= article.getFiles().size())
-        {
-            throw new IllegalStateException("The file index is out of range.");
+        // Save changes to the database
+        try {
+            userEntityRepository.save(currentUser);
+            return ResponseHandler.generateResponse("Product removed from favourite successfully.", HttpStatus.OK);
+        } catch (Exception e) {
+            return ResponseHandler.generateResponse("Failed to remove product from favourite list.", HttpStatus.INTERNAL_SERVER_ERROR);
         }
-        final FileData fileData = article.getFiles().get(fileIndex);
-        return fileService.downloadFile(fileData);
     }
 
 
-    @Override
-    public ResponseEntity<Object> fetchAllArticle(final long pageNumber) {
-        final Pageable pageable = PageRequest.of((int) pageNumber - 1, 10);
+////////////////////////////////////////////////////////////////////////////////////////////////////
 
-        final List<ArticleDTO> articles = articleRepository.fetchAllArticles(pageable).stream().map(articleDTOMapper).toList();
-        if(articles.isEmpty() && pageNumber > 1)
-        {
-            return fetchAllArticle(1);
-        }
-        final long total  = articleRepository.getTotalArticleCount();
-        return ResponseHandler.generateResponse(articles , HttpStatus.OK , articles.size() , total);
-    }
-
-    @Override
-    public void deleteAllArticles(List<Article> articles) {
-        articleRepository.deleteAllArticles(articles);
-    }
-
-    @Override
-    public ArticleDTO mapToDTOItem(Article article) {
-        return articleDTOMapper.apply(article);
-    }
-
-    @Override
-    public List<ArticleDTO> mapToDTOList(List<Article> articles)
-    {
-        return articles.stream().map(articleDTOMapper).toList();
-    }
-
-    @Override
-    public Article getArticleById(final long articleId)
-    {
-        return articleRepository.fetchArticleById(articleId).orElseThrow(
-                () -> new ResourceNotFoundException(String.format("The Article with ID : %d could not be found in our system", articleId))
+    public UserEntity getUserById(final UUID userId) {
+        return userEntityRepository.fetchUserById(userId).orElseThrow(
+                () -> new ResourceNotFoundException("The User with ID %s could not be found in our system.".formatted(userId))
         );
     }
-}*/
+
+    @Override
+    public UserEntity getUserByUsername(String username) {
+        return userEntityRepository.fetchUserWithUsername(username).orElseThrow(
+                () -> new ResourceNotFoundException("The User with USERNAME '%s' could not be found in our system.".formatted(username))
+        );
+    }
+
+
+
+
 
 }
